--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@types/cors": "2.x",
+    "caniuse-lite": "^1.0.30001603",
     "cors": "2.x",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "framer-motion": "^10.15.0",
     "isomorphic-unfetch": "4.0.2",
-    "next": "^13.4.12",
+    "next": "^13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "semantic-ui-css": "^2.5.0",
